getFirst getLast fix (made for 17th Java ver.)