@@ -16,7 +16,7 @@ public class Hand {
 
     public Card drawCard() throws Exception{
         try{
-            return this.cards.removeLast();
+            return this.cards.remove(this.cards.size() - 1);
         }
         catch (java.util.NoSuchElementException e){
             throw new Exception(e);
